Fix build issues on Windows in x86 mode

Building with a freshly installed VC++2022 gives errors:

 error C2695: 'AudioSource::AddRef': overriding virtual function differs
              from 'IUnknown::AddRef' only by calling convention

when building in x86 mode. Fix this by explicitly declaring all COM
overrides as STDCALL.

Fixes: QTBUG-112607
Change-Id: Ifcc89ef162db5143004700202ae231699d0da5fe
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 96c37ee46ca4ed798266d6152b90dac8d2e3b9b8)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>